<( and )> no longer need to balance. << and >> are now directional word boundaries, along with « and ». <?wb> is generic replacement for \b, <!wb> for \B Clarified case semantics of array subrules.
git-svn-id: http://svn.pugscode.org/pugs@23472 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S03.pod
+++ b/doc/trunk/design/syn/S03.pod
@@ -949,6 +949,8 @@ and code declarators:
     submethod foo
     multi foo
     proto foo
+    macro foo
+    quote qX
     regex foo
     rule foo
     token foo
