describe below -> described below
git-svn-id: http://svn.pugscode.org/pugs@23473 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S05.pod
+++ b/doc/trunk/design/syn/S05.pod
@@ -615,7 +615,7 @@ C<:ignorecase> setting.  (Subrules maintain their own case settings.)
 Both C<< < >> and C<< > >> are metacharacters, and are usually (but not
 always) used in matched pairs.  (Some combinations of metacharacters
 function as standalone tokens, and these may include angles.  These are
-describe below.)
+described below.)
 
 For matched pairs, the first character after C<< < >> determines the
 behavior of the assertion:
