--- a/doc/trunk/design/syn/S11.pod
+++ b/doc/trunk/design/syn/S11.pod
@@ -12,9 +12,9 @@ Larry Wall <larry@wall.org>
 
   Maintainer: Larry Wall <larry@wall.org>
   Date: 27 Oct 2004
-  Last Modified: 4 Jul 2006
+  Last Modified: 6 Jul 2006
   Number: 11
-  Version: 13
+  Version: 14
 
 =head1 Overview
 
@@ -265,17 +265,19 @@ degree of specificity.  And if some large company ever forks Perl, you can say
 
 to guarantee that you get the unembraced Perl.  C<:-)>
 
-Perl is the default module name, so
+Perl is the default module name, so this means the same thing:
 
     use v6-cpan:TPF;
 
-means the same thing.  As a variant of that, the current Perl 5
-incantation to switch to Perl 6 parsing is
+Before the full specification of Perl 6.0.0 is released, you can use C<alpha>
+as the author slot to denote a program using syntax that is still subject
+to change:
 
-    use v6-**;
+    use v6-alpha;
 
-(though in Perl 5 this actually ends up calling the v6.pm module with a
-C<-**> argument for insane-but-useful reasons.)
+The C<use v6-alpha> line also serves as the Perl 5 incantation to switch to
+Perl 6 parsing.  In Perl 5 this actually ends up calling the v6.pm module with a
+C<-alpha> argument, for insane-but-useful reasons.
 
 For wildcards any valid smartmatch selector works:
 
